alignment fixes

--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -38,8 +38,12 @@
 	@include flexbox(column);
 	justify-content: flex-start;
 	min-height: calc(100vh - 6rem);
-	padding: 5rem 0 8rem;
+	padding: 5rem 0;
 	position: relative;
+
+	@media (max-width: 1100px) {
+		padding: 5rem 0 8rem;
+	}
 }
 
 p {
